<resources>
    <string name="app_name">Walls</string>
    <string name="tab_new">New</string>
    <string name="tab_featured">Featured</string>
    <string name="tab_collections">Collections</string>
    <string name="sort">sort</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="popular">Popular</string>
    <string name="all">All</string>
    <string name="curated">Curated</string>
    <string name="featured">Featured</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming soon</string>
    <string name="photos">Photos</string>
    <string name="download">Download</string>
    <string name="bhoo">BHOO!</string>
    <string name="no_inet">No internet Connection</string>
    <string name="check_inet">Check your Internet Connection</string>
    <string name="retry">retry</string>

    <!--START SETTINGS-->

    <string name="general">General</string>

    <string name="language">Language</string>
    <string name="language_key">Language</string>
    <string name="default_language">English</string>
    <string-array name="language_entires">
        <item>English</item>
        <item>Ukrainian</item>
    </string-array>
    <string-array name="language_values">
        <item>English</item>
        <item>Ukrainian</item>
    </string-array>

    <string name="theme">Theme</string>
    <string name="theme_key">Theme</string>
    <string name="default_theme">Default</string>
    <string-array name="theme_entires">
        <item>Default</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>Default</item>
        <item>Dark</item>
    </string-array>

    <string name="quality">Quality</string>

    <string name="load_quality">Load Quality</string>
    <string name="load_quality_key">Load Quality</string>
    <string name="load_quality_subtitle">Choose the quality of the image that are loaded</string>
    <string name="default_load_quality">Regular</string>
    <string-array name="load_quality_entires">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>
    <string-array name="load_quality_values">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>

    <string name="download_quality">Download Quality</string>
    <string name="download_quality_key">Download Quality</string>
    <string name="download_quality_subtitle">Choose the quality of the image that are downloaded</string>
    <string name="default_download_quality">Full</string>
    <string-array name="download_quality_entires">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>
    <string-array name="download_quality_values">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>

    <string name="wallpaper_quality">Wallpaper Quality</string>
    <string name="wallpaper_quality_key">Wallpaper Quality</string>
    <string name="wallpaper_quality_subtitle">Choose the quality of the wallpapers set</string>
    <string name="default_wallpaper_quality">Full</string>
    <string-array name="wallpaper_quality_entires">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>
    <string-array name="wallpaper_quality_values">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>

    <!--END SETTINGS-->

</resources>
