<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/general"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="@string/default_language"
            android:dialogTitle="@string/language"
            android:enabled="false"
            android:entries="@array/language_entires"
            android:entryValues="@array/language_values"
            android:key="@string/language_key"
            android:negativeButtonText="@string/cancel"
            android:summary="@string/coming_soon"
            android:title="@string/language"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/default_theme"
            android:dialogTitle="@string/theme"
            android:enabled="false"
            android:entries="@array/theme_entires"
            android:entryValues="@array/theme_values"
            android:key="@string/theme_key"
            android:negativeButtonText="@string/cancel"
            android:summary="@string/coming_soon"
            android:title="@string/theme"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/quality"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="@string/default_load_quality"
            android:dialogTitle="@string/load_quality"
            android:entries="@array/load_quality_entires"
            android:entryValues="@array/load_quality_values"
            android:key="@string/load_quality_key"
            android:negativeButtonText="@string/cancel"
            android:summary="@string/load_quality_subtitle"
            android:title="@string/load_quality"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/default_download_quality"
            android:dialogTitle="@string/download_quality"
            android:entries="@array/download_quality_entires"
            android:entryValues="@array/download_quality_values"
            android:key="@string/download_quality_key"
            android:negativeButtonText="@string/cancel"
            android:summary="@string/download_quality_subtitle"
            android:title="@string/download_quality"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>